Backend array can be modified by '/like' request

--- a/12-Sept-2023/Session_Creation_and_use/public/index.html
+++ b/12-Sept-2023/Session_Creation_and_use/public/index.html
@@ -17,8 +17,10 @@
     </ul>
 
     <h2>Selected Names</h2>
-    <ul id="selectedNames"></ul>
+    <button id="getLiked">User Liked</button>
+    <ul id="liked-list"></ul>
   </div>
+  <button id="test">Test</button>
   <script type="module" src="app.js"></script>
 </body>
 
