Completed 'Session_Creation_and_use' project

--- a/12-Sept-2023/Session_Creation_and_use/public/index.html
+++ b/12-Sept-2023/Session_Creation_and_use/public/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,16 +10,15 @@
 
 <body>
   <div class="container">
-    <h1>Baby Names</h1>
+    <h1>Baby Name Generate</h1>
     <button id="addItemButton">Random</button>
     <ul id="item-list">
     </ul>
 
     <h2>Selected Names</h2>
-    <button id="getLiked">User Liked</button>
     <ul id="liked-list"></ul>
+
   </div>
-  <button id="test">Test</button>
   <script type="module" src="app.js"></script>
 </body>
 
